Add HTML, CSS, and Bootstrap to README

--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>My Name</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+    <header>
+      <h1>Hey there 👋, I'm Aaron</h1>
+      <h2>Student at the University of Nottingham</h2>
+    </header>
+
+    <section id="education">
+      I went to school in London
+    </section>
+
+    <section id="from">
+      I'm from New York, USA
+    </section>
+
+    <section id="work-experience">
+      I've interned at Skyscanner
+    </section>
   </body>
 </html>
